# skripsi-centrality

./: Centrality.ipynb  pyproject.toml  requirements.txt
api/: database.py  main.py  models.py
api/core/: dependencies.py  security.py
api/crud/: crud_admin.py  crud_agent.py  crud_agent_bonus.py  crud_base.py  crud_dealer.py  crud_document.py  crud_installment.py  crud_payment.py  crud_vehicle.py
api/management/: users.py
api/routers/: agents.py  auth.py  centrality.py  dealers.py  documents.py  installments.py  payments.py  utils.py  vehicles.py
api/routers/test/: seeding.py
api/schemas/: admin.py  agent.py  auth.py  dealer.py  document.py  installment.py  misc.py  payment.py  vehicle.py
data/: Formulir pendaftaran mitra R2.xlsx  ~$Formulir pendaftaran mitra R2.xlsx
