[project]
name = "skripsi-centrality"
version = "0.1.0"
description = ""
authors = [
    {name = "rianfrhn",email = "riandar.farhan1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "cryptography (>=45.0.3,<46.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "networkx (>=3.5,<4.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "pydantic[email] (>=2.11.5,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "uvicorn (>=0.34.3,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
